# Macro-Nation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  application.cpp  application.hpp  cmake_install.cmake  core.cpp  imgui.ini  interface.cpp  interface.hpp  macro_lib_impl.hpp  theme_api.cpp  theme_api.hpp  typedef.hpp  utils.cpp  utils.hpp  walk.cpp  walk.hpp
_macro_cache_/: macro_settings.json
_macro_cache_/fields/: bamboo.json  blue_flower.json  pine_tree_forest.json  strawberry.json  stump.json
_macro_cache_/patterns/: tidalwave.json
fields_impl/: pine_tree_forest.cpp
patterns_impl/: tidalwave.cpp
sub_macros/: clock.cpp  mondo.cpp  positions.cpp  red_cannon.cpp
